# DB_PRESENTATION_ML

./: .gitignore  README.md  docker-compose.yml
analize/: make_icons_vectors_dataset.ipynb  make_numeric_data_extractor.ipynb  notebook6c0d6aad9e.ipynb
datasets/: Датасет иконок.xlsx
gpt_service/: requirements.txt
gpt_service/src/: constants.py  main.py
gpt_service/src/getters/: get_prediction.py  get_text_gen_prompt.py  get_topic_text_prompt.py
gpt_service/src/models/: generate_text_body_models.py  generate_topics_texts_body_models.py
image_generation_service/: README.md  pyproject.toml  requirements.txt
image_generation_service/src/: constants.py  main.py
image_generation_service/src/actors/: fusion_brain_image_gen_actors.py
image_generation_service/src/getters/: get_model_id.py  get_propt_params.py
image_generation_service/src/models/: generate_image_body_models.py
presentation_generation_service/: README.md  pyproject.toml  requirements.txt
presentation_generation_service/datasets/: embedded_icons.pt  indexated_icons.json
presentation_generation_service/src/: constants.py  main.py
presentation_generation_service/src/commutators/: gpt_service_comutator.py  image_generator_comutator.py  (+2 more)
statistic_extractor_service/: pyproject.toml
statistic_extractor_service/src/: main.py
topic_modelling_service/: README.md  pyproject.toml  requirements.txt
topic_modelling_service/src/: constants.py  main.py
topic_modelling_service/src/getters/: clusterizator_getters.py
topic_modelling_service/src/models/: topic_moddeling_body_models.py
(+9 files in other folders)
